fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ input:focus {
 }
 
 h1 {
-  @apply mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white;
+  @apply mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl;
 }
 h3 {
-  @apply text-xl dark:text-white;
+  @apply text-xl;
 }
